# hourly_energy_consumption

./: .gitignore  README.md  hpc_notes  pyproject.toml
data/3/: all_stations.csv
notebooks/: arima-lstm-cnn.html  arima-lstm-cnn.ipynb  arima-lstm-cnn.py  ipynb_to_html.py  manim.py  pulling_data.py  time-series-forecasting-with-prophet.ipynb  time-series-forecasting-with-xgboost-1.html  time-series-forecasting-with-xgboost-1.ipynb  time-series-forecasting-with-xgboost-2.html  time-series-forecasting-with-xgboost-2.ipynb  time-series-forecasting-with-xgboost.html  time-series-forecasting-with-xgboost.ipynb  timexer.html  timexer.ipynb  timexer.py  timexer_best_hyperparams.json  xgboost-calendar.html  xgboost-calendar.ipynb  xgboost-weather-lag.html  xgboost-weather-lag.ipynb
notebooks/forecasting_output/: best_lstm_cnn_model.pt  evaluation_summary.txt
notebooks/media/Tex/: 007fb88d42840d6f.tex  02ff55c2e6549e31.tex  0a6bff0397aaf8bc.tex  0bb1c06a49f10f76.tex  0cc10ca81562cc62.tex  1403cbcb397da5b1.tex  18e1d4c1e79c5de7.tex  1adc9890d6464306.tex  1adf5cf8f5737699.tex  1d11b52b0fa49874.tex  1d561c0cf440562a.tex  20bf5dca0b433879.tex  21aefc615eb84f32.tex  247571e30fbb4b0a.tex  250d0fb0d4a4e0e8.tex  261d93ea1dd7f5a1.tex  276cbeb3653335b4.tex  277eade1dcd91847.tex  2844816fd8217200.tex  2ac11c5ac682a636.tex  2ad8a7f620f07c35.tex  2ee9ba333aad937b.tex  2f157d55072f45fb.tex  (+130 more)
results/: test_with_predictions.csv  train_with_predictions.csv  val_with_predictions.csv
timexer_files/: best_model.pt  feature_scaler.joblib  final_evaluation_metrics.json  target_scaler.joblib
(+7 files in other folders)
