[tool.poetry]
name = "hourly-energy-consumption"
version = "0.1.0"
description = ""
authors = ["David Lin"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.5"
scipy = "^1.15.2"
xgboost = "^3.0.0"
shap = "^0.47.2"
kagglehub = "^0.3.11"
seaborn = "^0.13.2"
matplotlib = "^3.10.1"
prophet = "^1.1.6"
meteostat = "^1.6.8"
statsmodels = "^0.14.4"
torch = "^2.7.0"
optuna = "^4.3.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
